# sdlc-assist-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  deploy.sh  inputs.py  pyproject.toml  server.py
src/sdlc_assist_mcp/: server-v1.py  server.py  supabase_client.py  vertex_client.py
src/sdlc_assist_mcp/models/: inputs.py
